# MCAT-Prep-App

./: .gitignore  CLAUDE.md  GEMINI.md  MCAT_Prep_App_PRD.md  pyproject.toml  supabase_rls_policies.sql  vercel.json
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx
mcat_prep_app/: database.py  epub_parser.py  main.py  models.py  question_generator.py  seed_database.py  supabase_client.py
questions/: README.md  book-mapping.json  schema.json
questions/behavioral-sciences/: chapter-01.json  chapter-02.json  chapter-03.json  chapter-04.json  chapter-05.json  chapter-06.json  chapter-07.json  chapter-08.json  chapter-09.json  chapter-10.json  chapter-11.json  chapter-12.json
questions/biochemistry/: chapter-01.json  chapter-02.json  chapter-03.json  chapter-04.json  chapter-05.json  chapter-06.json  chapter-07.json  chapter-08.json  chapter-09.json  chapter-10.json
questions/biology/: chapter-01.json  chapter-02.json  chapter-03.json  chapter-04.json  chapter-05.json  chapter-06.json  chapter-07.json  chapter-08.json  chapter-09.json  chapter-10.json  chapter-11.json  chapter-12.json
questions/cars/: chapter-01.json  chapter-02.json  chapter-03.json  chapter-04.json  chapter-05.json  chapter-06.json  chapter-07.json  chapter-08.json  chapter-09.json
questions/general-chemistry/: chapter-01.json  chapter-02.json  chapter-03.json  chapter-04.json  chapter-05.json  chapter-06.json  chapter-07.json  chapter-08.json  chapter-09.json  chapter-10.json
questions/organic-chemistry/: chapter-01.json  (+9 more)
supabase/: README.md
(+22 files in other folders)
