[tool.poetry]
name = "mcat-prep-app"
version = "0.1.0"
description = "An application to help study for the MCAT using custom review books."
authors = ["Gemini"]

[tool.poetry.dependencies]
python = "^3.9"
ebooklib = "^0.18"
beautifulsoup4 = "^4.12.3"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.1"}
sqlalchemy = "^2.0.27"

[tool.poetry.dev-dependencies]
pytest = "^7.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
